--- a/my-table.html
+++ b/my-table.html
@@ -68,8 +68,10 @@
                                         var day = tdate.getDay();
                                         var month = tdate.getMonth();
                                         var year = tdate.getFullYear();
-                                        var minute = tdate.getMinutes();
-                                        var hour = tdate.getHours();
+                                        var tminute = tdate.getMinutes();
+                                        var minute = ('0' + tminute).slice(-2);
+                                        var thour = tdate.getHours();
+                                        var hour = ('0' + thour).slice(-2);
                                         var date = day+"/"+month+"/"+year+" "+hour+":"+minute;
                                         myData.push({
                                             id: i,
